--- a/action.yml
+++ b/action.yml
@@ -26,11 +26,9 @@ runs:
         # Trivy (cli + db embutido)
         curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
         
-        # tfsec
-        TFSEC_VERSION=$(curl -s https://api.github.com/repos/aquasecurity/tfsec/releases/latest | jq -r .tag_name)  # v1.x.y
-        curl -sL "https://github.com/aquasecurity/tfsec/releases/download/${TFSEC_VERSION}/tfsec-linux-amd64" -o tfsec
-        chmod +x tfsec && sudo mv tfsec /usr/local/bin/        
-        tfsec --version
+        # tfscan
+        go install github.com/aquasecurity/tfsec/cmd/tfscan@latest
+        mv "$(go env GOPATH)/bin/tfscan" /usr/local/bin/
 
         # TFLint
         TFLINT_VERSION=$(curl -s https://api.github.com/repos/terraform-linters/tflint/releases/latest | jq -r .tag_name)
