--- a/action.yml
+++ b/action.yml
@@ -26,9 +26,10 @@ runs:
         # Trivy (cli + db embutido)
         curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
         
-        # tfscan
-        go install github.com/aquasecurity/tfsec/cmd/tfscan@latest
-        mv "$(go env GOPATH)/bin/tfscan" /usr/local/bin/
+        # Terrascan
+        TERRASCAN_VERSION=$(curl -s https://api.github.com/repos/tenable/terrascan/releases/latest | jq -r .tag_name)
+        curl -sL "https://github.com/tenable/terrascan/releases/download/${TERRASCAN_VERSION}/terrascan_${TERRASCAN_VERSION}_Linux_x86_64.tar.gz" \
+          | tar -xz terrascan && sudo mv terrascan /usr/local/bin
 
         # TFLint
         TFLINT_VERSION=$(curl -s https://api.github.com/repos/terraform-linters/tflint/releases/latest | jq -r .tag_name)
