--- a/action.yml
+++ b/action.yml
@@ -40,7 +40,8 @@ runs:
         unzip -q tflint.zip -d /usr/local/bin && chmod +x /usr/local/bin/tflint
 
         # Docker Scout
-        docker scout --help > /dev/null 2>&1 || docker extension install docker/scout-cli:latest
+        curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+        sh install-scout.sh
 
     - name: Scan Docker and open issues
       shell: bash
